--- a/Line/Model-Data/ssd_mobilenet_v2_quantized_300x300_coco.config
+++ b/Line/Model-Data/ssd_mobilenet_v2_quantized_300x300_coco.config
@@ -6,7 +6,7 @@
 
 model {
   ssd {
-    num_classes: 90
+    num_classes: 4
     box_coder {
       faster_rcnn_box_coder {
         y_scale: 10.0
@@ -153,28 +153,20 @@ train_config: {
       epsilon: 1.0
     }
   }
-  fine_tune_checkpoint: "PATH_TO_BE_CONFIGURED/model.ckpt"
+  fine_tune_checkpoint: "My_Models/ssd_mobilenet_v2_quantized_300x300_coco_2019_01_03/model.ckpt"
   fine_tune_checkpoint_type:  "detection"
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
   # effectively bypasses the learning rate schedule (the learning rate will
   # never decay). Remove the below line to train indefinitely.
   num_steps: 200000
-  data_augmentation_options {
-    random_horizontal_flip {
-    }
-  }
-  data_augmentation_options {
-    ssd_random_crop {
-    }
-  }
 }
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED/mscoco_train.record-?????-of-00100"
+    input_path: "data/RCJ2021_Line_Square_Detector/train.record"
   }
-  label_map_path: "PATH_TO_BE_CONFIGURED/mscoco_label_map.pbtxt"
+  label_map_path: "data/RCJ2021_Line_Square_Detector/object-detection.pbtxt"
 }
 
 eval_config: {
@@ -186,9 +178,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED/mscoco_val.record-?????-of-00010"
+    input_path: "data/RCJ2021_Line_Square_Detector/test.record"
   }
-  label_map_path: "PATH_TO_BE_CONFIGURED/mscoco_label_map.pbtxt"
+  label_map_path: "data/RCJ2021_Line_Square_Detector/object-detection.pbtxt"
   shuffle: false
   num_readers: 1
 }
