--- a/Line/Model-Data/ssd_mobilenet_v2_quantized_300x300_coco.config
+++ b/Line/Model-Data/ssd_mobilenet_v2_quantized_300x300_coco.config
@@ -51,7 +51,7 @@ model {
         min_depth: 0
         max_depth: 0
         num_layers_before_predictor: 0
-        use_dropout: false
+        use_dropout: true
         dropout_keep_probability: 0.8
         kernel_size: 1
         box_code_size: 4
@@ -159,7 +159,7 @@ train_config: {
   # empirically found to be sufficient enough to train the pets dataset. This
   # effectively bypasses the learning rate schedule (the learning rate will
   # never decay). Remove the below line to train indefinitely.
-  num_steps: 6000
+  num_steps: 200000
 }
 
 train_input_reader: {
